tests/build/property_macro/fail/invalid_input_type.stderr
error[E0277]: the trait bound `NotDebuggable: Clone` is not satisfied
  --> $DIR/invalid_input_type.rs:10:49
   |
10 | pub fn invalid_input(child: impl UiNode, input: NotDebuggable) -> impl UiNode {
   |                                                 ^^^^^^^^^^^^^ the trait `Clone` is not implemented for `NotDebuggable`
   |
   = note: required by `clone`

error[E0599]: no method named `debug_var` found for reference `&&&zero_ui::zero_ui_core::debug::debug_var_util::Wrap<NotDebuggable>` in the current scope
   --> $DIR/invalid_input_type.rs:10:49
    |
7   | pub struct NotDebuggable;
    | -------------------------
    | |
    | doesn't satisfy `NotDebuggable: Debug`
    | doesn't satisfy `NotDebuggable: IntoVar<_>`
    | doesn't satisfy `NotDebuggable: Var<_>`
...
10  | pub fn invalid_input(child: impl UiNode, input: NotDebuggable) -> impl UiNode {
    |                                                 ^^^^^^^^^^^^^ method not found in `&&&zero_ui::zero_ui_core::debug::debug_var_util::Wrap<NotDebuggable>`
    |
   ::: $WORKSPACE/zero-ui-core/src/debug.rs
    |
    |     pub struct Wrap<T>(pub T);
    |     -------------------------- doesn't satisfy `_: zero_ui::zero_ui_core::debug::debug_var_util::FromIntoVar<_>`
    |
    = note: the method `debug_var` exists but the following trait bounds were not satisfied:
            `NotDebuggable: Debug`
            which is required by `&&zero_ui::zero_ui_core::debug::debug_var_util::Wrap<NotDebuggable>: zero_ui::zero_ui_core::debug::debug_var_util::FromValue`
            `NotDebuggable: Var<_>`
            which is required by `&zero_ui::zero_ui_core::debug::debug_var_util::Wrap<NotDebuggable>: zero_ui::zero_ui_core::debug::debug_var_util::FromVar<_>`
            `NotDebuggable: IntoVar<_>`
            which is required by `zero_ui::zero_ui_core::debug::debug_var_util::Wrap<NotDebuggable>: zero_ui::zero_ui_core::debug::debug_var_util::FromIntoVar<_>`
